[gd_scene load_steps=8 format=3 uid="uid://cbcn3m3pg8kne"]

[ext_resource type="Theme" uid="uid://g71iua03uavk" path="res://Themes/main_menu_button_theme.tres" id="1_1wnb6"]
[ext_resource type="Script" path="res://Scripts/UI/main_menu.gd" id="1_f7sh8"]
[ext_resource type="Texture2D" uid="uid://ykjf65ytkke2" path="res://Assets/Images/MenuImages/mainMenuImage.png" id="2_dbtl0"]
[ext_resource type="Theme" uid="uid://dmbaupj8xyny4" path="res://Themes/main_menu_title.tres" id="3_0iegv"]
[ext_resource type="Texture2D" uid="uid://bg0lgkqe2gub3" path="res://Assets/Images/Icons/SkipIconWhite.png" id="4_bxmcs"]

[sub_resource type="Gradient" id="Gradient_ux3iy"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.623188, 1)
colors = PackedColorArray(0, 0, 0, 0.835294, 0, 0, 0, 0.717647, 0.141176, 0.141176, 0.141176, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4lm7u"]
gradient = SubResource("Gradient_ux3iy")
width = 1000
height = 1000
fill_from = Vector2(0, 1)
fill_to = Vector2(0.8, 0.5)
metadata/_snap_enabled = true

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f7sh8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="BackgroundImage" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dbtl0")
expand_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Gradient" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -438.0
offset_top = -651.0
offset_right = 1191.0
offset_bottom = 220.0
grow_vertical = 0
texture = SubResource("GradientTexture2D_4lm7u")
expand_mode = 1

[node name="Title" type="Label" parent="CanvasLayer"]
z_index = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -771.44
offset_top = 32.0
offset_right = -50.4399
offset_bottom = 401.0
grow_horizontal = 0
theme = ExtResource("3_0iegv")
theme_override_font_sizes/font_size = 80
text = "Crumbling

Castle"
horizontal_alignment = 2

[node name="NowPlaying" type="Label" parent="CanvasLayer"]
z_index = 2
offset_left = 23.18
offset_top = 16.38
offset_right = 1277.18
offset_bottom = 102.38
theme_override_font_sizes/font_size = 25
text = "â™«:"
autowrap_mode = 2

[node name="SkipButton" type="Button" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 40.64
offset_right = 44.0
offset_bottom = 64.64
scale = Vector2(1.2, 1.2)
icon = ExtResource("4_bxmcs")
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 54.41
offset_top = -374.41
offset_right = 342.41
offset_bottom = -47.4099
grow_vertical = 0
theme_override_constants/separation = 60

[node name="DemoButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_1wnb6")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 60
text = "Demo"
alignment = 0

[node name="OptionsButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_1wnb6")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 60
text = "Options"
alignment = 0

[node name="ExitButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_1wnb6")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 60
text = "Exit"
alignment = 0

[connection signal="pressed" from="CanvasLayer/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/DemoButton" to="." method="_on_demo_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
